cleanup virtual threads, properties and session service